--- a/app/assets/stylesheets/app/layout.css.sass
+++ b/app/assets/stylesheets/app/layout.css.sass
@@ -21,6 +21,9 @@
 footer
   padding: rem-calc(20)
 
+h1, h2, h4, div, p
+  word-break: break-word
+
 .flash-messages
   position: absolute
   z-index: 1
